<resources>
    <string name="app_name">Exam Question Timer</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="start">start</string>
    <string name="number_of_questions">Number of Questions ?</string>
    <string name="stop_exam_button">Stop Exam Button</string>
    <string name="_00_00_00">00 : 00: 00</string>
    <string name="_4">4</string>
    <string name="_00_00_01">00 : 00: 01</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="history_title">History</string>
    <string name="history_list_placeholder_description">Your practise exam logs will appear here</string>
    <string name="placeholder_image">placeholder image</string>
    <string name="sample_date">23 August, 2021</string>
    <string name="sample_attempted">Attempted: 10</string>
    <string name="sample_time_taken">Time: 10 hr 30 mins</string>
    <string name="question_number">Question No</string>
    <string name="time">Time</string>
    <string name="sample_time">3 min 20 sec</string>
    <string name="sample_time_full">4 hr 3 min 20 sec</string>
    <string name="sample_q_no">1</string>
    <string name="send_email">Send Email</string>
    <string name="sample_time_range">5:00 AM - 8:30 AM</string>
    <string name="sample_total_questions">Total Questions: 34</string>
    <string name="sample_idle_time">Idle Time: 10 min 2 sec</string>
    <string name="sample_active_time">Active Time: 2 hr 20 min 54 sec</string>
    <string name="attempted">Attempted:</string>
    <string name="active_time">Active Time:</string>
    <string name="idle_time">Idle Time:</string>
    <string name="total">Total:</string>
    <string name="delete_list_item">Delete List Item</string>
    <string name="exam_stop">Stop Exam?</string>
    <string name="stop">Stop</string>
    <string name="no">No</string>
    <string name="history_delete_items">Delete selected exams?</string>
    <string name="delete">Delete</string>
    <string name="selection_tick">Selection Tick</string>

    <string name="pref_review_last_ask_date">review last ask date</string>
    <string name="pref_review_ask_count">review ask count</string>
</resources>
