<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="28dp"
    android:paddingTop="32dp"
    android:paddingEnd="10dp"
    android:paddingBottom="10dp">

    <TextView
        android:id="@+id/history_detail_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/history_detail_summary_txt_padding"
        android:text="@string/sample_date"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/history_detail_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/history_detail_summary_txt_padding"
        android:text="@string/sample_time_range"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/history_detail_date"
        app:layout_constraintLeft_toRightOf="@id/history_detail_date" />

    <LinearLayout
        android:id="@+id/history_detail_ll_total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="6dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/history_detail_date">

        <TextView
            android:id="@+id/history_detail_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/history_detail_summary_txt_padding"
            android:text="@string/total" />

        <TextView
            android:id="@+id/history_detail_total_questions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/history_detail_summary_txt_padding"
            android:text="@string/_4" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/history_detail_ll_attempted"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/history_detail_ll_total">

        <TextView
            android:id="@+id/history_detail_attempted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/history_detail_summary_txt_padding"
            android:text="@string/attempted" />

        <TextView
            android:id="@+id/history_detail_attempted_questions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/history_detail_summary_txt_padding"
            android:text="@string/_4" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/history_detail_ll_idle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/history_detail_ll_attempted">

        <TextView
            android:id="@+id/history_detail_idle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/history_detail_summary_txt_padding"
            android:text="@string/idle_time"
            android:textColor="#F44336" />

        <TextView
            android:id="@+id/history_detail_idle_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/history_detail_summary_txt_padding"
            android:text="@string/sample_time_full"
            android:textColor="@color/redTextColor" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/history_detail_ll_active"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/history_detail_ll_idle">

        <TextView
            android:id="@+id/history_detail_active"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/history_detail_summary_txt_padding"
            android:text="@string/active_time"
            android:textColor="#388E3C" />

        <TextView
            android:id="@+id/history_detail_active_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/history_detail_summary_txt_padding"
            android:text="@string/sample_time_full"
            android:textColor="@color/greenTextColor" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>