<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/history_list_container"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:elevation="100dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/history_list_item_selector"
        android:padding="12dp">

        <TextView
            android:id="@+id/history_tv_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sample_date"
            android:textSize="24sp"
            android:padding="6dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/history_tv_attempted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_attempted"
            android:textSize="12sp"
            android:padding="6dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/history_tv_date" />

        <TextView
            android:id="@+id/history_tv_time_taken"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_time_taken"
            android:textSize="12sp"
            android:padding="6dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/history_tv_date" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>