<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".HomeActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@android:color/white"
            android:textSize="34sp"
            android:text="@string/app_name"/>
    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_centerInParent="true"
        android:layout_marginEnd="10dp"
        android:elevation="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:orientation="vertical">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:padding="5dp"
                android:backgroundTint="@android:color/holo_green_dark"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"
                android:inputType="number"
                android:id="@+id/et_questions"
                android:importantForAutofill="no"
                android:hint="@string/number_of_questions"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:padding="8dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:background="@color/colorPrimary"
                android:textColor="@android:color/white"
                android:layout_gravity="end"
                android:enabled="false"
                android:id="@+id/btn_start"
                android:text="@string/start"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>