<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="horizontal">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_weight="1"
        app:cardElevation="8dp"
        app:cardCornerRadius="8dp"
        android:layout_margin="12dp"
        android:id="@+id/grid1"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="false"
        android:focusable="false">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textAlignment="center"
                android:layout_centerHorizontal="true"
                android:padding="10dp"
                android:layout_alignParentBottom="true"
                android:text="@string/_00_00_00"
                android:id="@+id/tv_time"
                android:textSize="14sp"
                app:drawableTint="@android:color/holo_green_light" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textSize="40sp"
                android:text="@string/_4"
                android:layout_above="@id/tv_time"
                android:id="@+id/tv_q_number" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_weight="1"
        app:cardElevation="8dp"
        app:cardCornerRadius="8dp"
        android:layout_margin="12dp"
        android:id="@+id/grid2"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="false"
        android:focusable="false">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textAlignment="center"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:padding="10dp"
                android:text="@string/_00_00_01"
                android:id="@+id/tv_time2"
                android:textSize="14sp"
                app:drawableTint="@android:color/holo_green_light" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textSize="40sp"
                android:text="@string/_4"
                android:layout_above="@id/tv_time2"
                android:id="@+id/tv_q_number2" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>